--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,3 +1,5 @@
 [user]
 	name = Ben Falconer
 	email = ben@falconers.me.uk
+[alias]
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
