--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -3,3 +3,5 @@
 	email = ben@falconers.me.uk
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[color]
+	ui = 1
