--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -30,7 +30,7 @@ bind r source-file ~/.tmux.conf
 # Cycle panes:
 bind tab select-pane -t :.+
 #set-option -g mouse-select-pane on
-setw -g mode-mouse on
+#setw -g mode-mouse on
 setw -g mode-keys vi
 
 # Some misc stuff:
