A couple of updates, mostly updating vundle to use plugin rather than bundle syntax

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -31,6 +31,7 @@ bind r source-file ~/.tmux.conf
 bind tab select-pane -t :.+
 #set-option -g mouse-select-pane on
 #setw -g mode-mouse on
+setw -g mode-mouse off
 setw -g mode-keys vi
 
 # Some misc stuff:
