Update vimdiff alias to use extdiff

--- a/home/.hgrc
+++ b/home/.hgrc
@@ -26,14 +26,19 @@ shelve =
 graphlog =
 record =
 hgext.crecord = /home/zed0/hg/crecord/crecord
+hgext.extdiff =
+
+[extdiff]
+cmd.vimdiff =
+opts.vimdiff = -c "cnoreabbrev q :qa!"
 
 [alias]
 lg = log -l 30 --color=always -G --template "{if(tags, label('custom.tag','[{tags}] '))}{if(bookmarks, label('custom.bookmark','[{bookmarks}] '))}{label('custom.rev',node|short)} {desc|firstline} {label('custom.time',date|age)} {label('custom.author',author|person)}"
 lgs = log -l 30 --color=always -G --template "{if(tags, label('custom.tag','[{tags}] '))}{if(bookmarks, label('custom.bookmark','[{bookmarks}] '))}{label('custom.rev',node|short)} {label('custom.time',date|age)} {label('custom.author',author|person)}"
 # Compact log (removes empty lines): hg lg | grep '[^| ]' --color=never
 lgc = !$HG lg -l 50 $@ | grep '[^| ]' --color=never
-#works with -r, not -c
-vimdiff = !$HG cat $@ | vim - -c ":vert diffsplit $1" -c "cnoreabbrev q :qa!"
+#works with -r, not -c use extdiff instead. ^^
+#vimdiff = !$HG cat $@ | vim - -c ":vert diffsplit $1" -c "cnoreabbrev q :qa!"
 
 [color]
 custom.rev = red
