feat: Minor git/hg changes

--- a/home/.hgrc
+++ b/home/.hgrc
@@ -5,6 +5,7 @@
 username = Ben Falconer <ben@falconers.me.uk>
 merge = vimdiff
 style = compact
+commitsubrepos = false
 
 [merge-tools]
 vimdiff.executable = vimdiff
@@ -56,3 +57,11 @@ changeset.draft=green
 
 [hooks]
 pretxncommit.bad = check_commit.py
+
+[revsetalias]
+
+# Get the last branching commit (i.e. last commit with multiple descendents)
+prev_branchpoint($1) = last(ancestors($1) and branchpoint())
+
+# Get the commit after the last branch (i.e. what you rebase from if you do rebase -b $1).
+base($1) = last(limit(reverse(last(prev_branchpoint($1)::$1)),2))
