--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -5,3 +5,6 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [color]
 	ui = 1
+[core]
+	editor = vim
+	pager = less -FRXS
