feat: Move left/right whole words in tmux with ctrl+left/right

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -46,6 +46,9 @@ set -ag terminal-overrides ",xterm-256color:setaf=\e[3%p1%dm:setab=\E[4%p1%dm"
 set-option -g visual-activity on
 set-window-option -g monitor-activity on
 
+# Allow xterm keys (i.e. ctrl-left and ctrl-right to move a word
+set-window-option -g xterm-keys on
+
 # Status line:
 set -g status-bg blue
 set -g status-fg white
