--- a/home/.hgrc
+++ b/home/.hgrc
@@ -7,6 +7,7 @@ merge = vimdiff
 style = compact
 commitsubrepos = false
 ignore = /home/zed0/hg/ignore
+interface = curses
 
 [merge-tools]
 vimdiff.executable = vimdiff
@@ -52,6 +53,14 @@ blame = annotate --user --changeset --date -q
 
 #works with -r, not -c use extdiff instead. ^^
 #vimdiff = !$HG cat $@ | vim - -c ":vert diffsplit $1" -c "cnoreabbrev q :qa!"
+
+# Show strip backups against the current repository using hg in. Any arguments are passed to hg in (so e.g. you can use -p to show full patches).
+show-strip-backups = !HGPLAIN="true" ls -d -1 "$(hg root)/.hg/strip-backup/"* -t | xargs -I{} -n 1 sh -c 'hg in --color=always {} "$@" 2>&1 || true' | less -FRX
+# HGPLAIN=true is set so that aliases etc don't ruin things, the command is run in sh with `|| true` so that failed attempts to compare a backup file against the current repo don't kill the command.
+
+backout-commit = !$HG backout -r "$1" && $HG commit -m "Backed out $1"
+
+multi-backout = !$HG log -r "$1" -T "{node}\n" | xargs -n1 $HG backout-commit
 
 [color]
 custom.rev = red
