--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -2,7 +2,7 @@
 	name = Ben Falconer
 	email = ben@falconers.me.uk
 [alias]
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --all
 [color]
 	ui = 1
 [core]
