--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -7,7 +7,7 @@ bind-key C-a last-window
 unbind x
 bind x lock-server
 set -g lock-command vlock
-set -g lock-server on
+#set -g lock-server on
 
 # Pane moving:
 unbind l
@@ -31,7 +31,7 @@ bind r source-file ~/.tmux.conf
 bind tab select-pane -t :.+
 #set-option -g mouse-select-pane on
 #setw -g mode-mouse on
-setw -g mode-mouse off
+setw -g mouse off
 setw -g mode-keys vi
 
 # Some misc stuff:
@@ -40,7 +40,7 @@ set -g history-limit 1000
 set-window-option -g aggressive-resize on
 
 # Make bold work properly:
-set -ag terminal-overrides ",xterm-256color:setaf=\e[3%p1%dm:setab=\E[4%p1%dm"
+#set -ag terminal-overrides ",xterm-256color:setaf=\e[3%p1%dm:setab=\E[4%p1%dm"
 
 # Notifying if other windows has activities:
 set-option -g visual-activity on
@@ -60,3 +60,6 @@ set -g status-left-length 30
 set -g status-left '#[fg=green,bold](#S) #(whoami)@#H#[default]'
 set -g status-right '#[fg=yellow]%F %H:%M#[default]'
 #set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
+
+# Make pressing esc immediate rather delayed by half a second
+set -sg escape-time 0
