--- a/home/.hgrc
+++ b/home/.hgrc
@@ -8,6 +8,7 @@ style = compact
 commitsubrepos = false
 ignore = /home/zed0/hg/ignore
 interface = curses
+tweakdefaults = true
 
 [merge-tools]
 vimdiff.executable = vimdiff
@@ -15,9 +16,6 @@ vimdiff.args = -f -d $output -M $local $base $other -c "wincmd J" -c "set modifi
 vimdiff.premerge = keep
 
 [extensions]
-# uncomment these lines to enable some popular extensions
-# (see "hg help extensions" for more info)
-
 pager =
 strip =
 rebase =
@@ -29,24 +27,15 @@ shelve =
 graphlog =
 record =
 hgext.extdiff =
-# https://bitbucket.org/durin42/hg-remotebranches
-remotebranches = /home/zed0/hg/hg-remotebranches/hg_remotebranches.py
-hggit = /home/zed0/hg/hg-git/hggit
+absorb =
 evolve =
-absorb = /home/zed0/hg/hg-experimental/hgext3rd/absorb/
-smartlog = /home/zed0/hg/hg-experimental/hgext3rd/smartlog.py
-chistedit = /home/zed0/hg/hg-experimental/hgext3rd/chistedit.py
-githelp = /home/zed0/hg/hg-experimental/hgext3rd/githelp.py
-undo = /home/zed0/hg/hg-experimental/hgext3rd/undo.py
-inhibit = /home/zed0/hg/hg-experimental/hgext3rd/inhibit.py
-backups = /home/zed0/hg/hg-experimental/hgext3rd/backups.py
 convert =
 show =
 
 [pager]
 pager = LESS='FRSXQ' less
 quiet = True
-attend = annotate,blame,log,shelve,diff,gdiff,smartlog,sl,absorb
+attend = annotate,blame,log,shelve,diff,gdiff,smartlog,sl
 
 [extdiff]
 cmd.vimdiff =
@@ -54,13 +43,9 @@ opts.vimdiff = -c "cnoreabbrev q :qa!"
 
 [alias]
 lg_base = log --color=always -G --template "{if(tags, label('custom.tag','[{tags}] '))}{if(remotebranches, label('custom.tag','({remotebranches}) '))}{if(bookmarks, label('custom.bookmark','[{bookmarks}] '))}{label('changeset.{phase}',node|short)} {desc|firstline} {label('custom.time',date|age)} {label('custom.author',author|person)}"
-#lgs = log -l 30 --color=always -G --template "{if(tags, label('custom.tag','[{tags}] '))}{if(bookmarks, label('custom.bookmark','[{bookmarks}] '))}{label('custom.rev',node|short)} {label('custom.time',date|age)} {label('custom.author',author|person)}"
-# Compact log (removes empty lines): hg lg | grep '[^| ]' --color=never
 lg = !$HG lg_base "$@" | less -FRXS
 lgc = !$HG lg_base "$@" | grep '[^| ]' --color=never 2>/dev/null | less -FRXS
 lgr = !$HG lg_base | grep '[^| ]' --color=never 2>/dev/null | less -FRXS -j.5 -p$1
-
-sl=smartlog --template "{shortest(node)}  {author|user}  {bookmarks % '{ifeq(bookmark, current, label(\"yellow\", \" {bookmark}*\"), label(\"green\", \" {bookmark}\"))}'} {ifeq(branch, 'default', '', label(\"bold\", branch))}\n{desc|firstline}\n\n"
 
 blame = annotate --user --changeset --date -q
 
@@ -88,9 +73,6 @@ changeset.public=red
 changeset.secret=blue
 changeset.draft=green
 
-[hooks]
-pretxncommit.bad = check_commit.py
-
 [revsetalias]
 
 # Get the last branching commit (i.e. last commit with multiple descendents)
@@ -101,3 +83,13 @@ base($1) = last(limit(reverse(last(prev_branchpoint($1)::$1)),2))
 
 [remotenames]
 syncbookmarks = True
+
+[diff]
+word-diff=true
+
+[rebase]
+experimental.inmemory = True
+
+[commands]
+
+%include ./.hgrc.machine_specific
