Use vim directions to switch tmux panes

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,16 +3,18 @@ unbind x
 bind x lock-server
 set -g lock-command vlock
 
+# Pane switching
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 # Pane moving:
-unbind l
-bind h resize-pane -L 1
 bind H resize-pane -L 5
-bind j resize-pane -D 1
 bind J resize-pane -D 5
-bind k resize-pane -U 1
 bind K resize-pane -U 5
-bind l resize-pane -R 1
 bind L resize-pane -R 5
+
+# Switch layout
 bind = select-layout tiled
 
 # Kill pane:
