--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -25,9 +25,7 @@ bind r source-file ~/.tmux.conf
 
 # Cycle panes:
 bind tab select-pane -t :.+
-#set-option -g mouse-select-pane on
-#setw -g mode-mouse on
-setw -g mouse off
+setw -g mouse on
 setw -g mode-keys vi
 
 # Some misc stuff:
@@ -52,7 +50,16 @@ set -g status-interval 1
 set -g status-left-length 30
 set -g status-left '#[fg=green,bold](#S) #(whoami)@#H#[default]'
 set -g status-right '#[fg=yellow]%F %H:%M#[default]'
-#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
 # Make pressing esc immediate rather delayed by half a second
 set -sg escape-time 0
+
+# Make help messages etch last longer
+set-option -g display-time 4000
+
+# Copy to X copy buffer
+bind P paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'C-v' rectangle-toggle
+bind-key -t vi-copy 'y' copy-selection
+bind -t vi-copy y copy-pipe "xclip -i"
