Switch back and forth in tmux

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,6 +3,9 @@ unbind x
 bind x lock-server
 set -g lock-command vlock
 
+# Switch back and forth with a double tap of C-b
+bind-key C-b last-window
+
 # Pane switching
 bind h select-pane -L
 bind j select-pane -D
