Autofix with eslint rather than tslint

--- a/home/.vim/coc-settings.json
+++ b/home/.vim/coc-settings.json
@@ -20,7 +20,7 @@
 		}
 	},
 	"eslint.filetypes": ["javascript", "typescript"],
-	"tslint.autoFixOnSave": true,
+	"eslint.autoFixOnSave": true,
 	"coc.source.file.ignorePatterns": ["docker-data"],
 	"typescript.preferences.importModuleSpecifier": "relative"
 }
